--- a/views/scatterdata/index.ejs
+++ b/views/scatterdata/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scatter plot</title>
     <script defer src="./visualization.js"></script>
-    <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
